Fixed issue with horizontal scrollbar/overflow.

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -4222,7 +4222,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-collapse {
   padding-right: 15px;
   padding-left: 15px;
-  overflow-x: visible;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
   border-top: 1px solid transparent;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
@@ -4240,7 +4240,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     -webkit-box-shadow: none;
             box-shadow: none;
             background-color: transparent !important;
-            border-radius: 10px;
   }
   .navbar-collapse.collapse {
     display: block !important;
